--- a/projects/muber/package.json
+++ b/projects/muber/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon --exec 'mocha --recursive -R min'"
   },
   "author": "Weiming Zhai <wmzhai@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "express": "^4.15.2",
     "mocha": "^3.2.0",
-    "mongoose": "^4.9.0"
+    "mongoose": "^4.9.0",
+    "supertest": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
