--- a/projects/muber/package.json
+++ b/projects/muber/package.json
@@ -9,6 +9,7 @@
   "author": "Weiming Zhai <wmzhai@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "mocha": "^3.2.0",
     "mongoose": "^4.9.0",
